[gd_scene load_steps=5 format=2]

[ext_resource path="res://engine/debug.gd" type="Script" id=1]
[ext_resource path="res://engine/ui/uifont.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="debug" type="CanvasLayer"]
scale = Vector2( 2, 2 )
transform = Transform2D( 2, 0, 0, 2, 0, 0 )
script = ExtResource( 1 )

[node name="update" type="Timer" parent="."]
wait_time = 0.05

[node name="margin" type="MarginContainer" parent="."]
margin_right = 512.0
margin_bottom = 300.0
theme = SubResource( 2 )
custom_constants/margin_right = 4
custom_constants/margin_top = 0
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="topleft" type="VBoxContainer" parent="margin"]
margin_left = 4.0
margin_right = 508.0
margin_bottom = 296.0
custom_constants/separation = -2

[node name="fps" type="Label" parent="margin/topleft"]
margin_right = 30.0
margin_bottom = 13.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "FPS: "

[node name="map" type="Label" parent="margin/topleft"]
margin_top = 11.0
margin_right = 30.0
margin_bottom = 24.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Map: "

[node name="zone" type="Label" parent="margin/topleft"]
margin_top = 22.0
margin_right = 36.0
margin_bottom = 35.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Zone: "

[node name="objects" type="Label" parent="margin/topleft"]
margin_top = 33.0
margin_right = 48.0
margin_bottom = 46.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Objects:"

[node name="map_objects" type="Label" parent="margin/topleft"]
margin_top = 44.0
margin_right = 36.0
margin_bottom = 57.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = " Map: "

[node name="zone_objects" type="Label" parent="margin/topleft"]
margin_top = 55.0
margin_right = 42.0
margin_bottom = 68.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = " Zone: "

[node name="active_objects" type="Label" parent="margin/topleft"]
margin_top = 66.0
margin_right = 48.0
margin_bottom = 79.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = " Active:"
[connection signal="timeout" from="update" to="." method="update"]
